<resources>
    <string name="app_name">Contree</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="platform">Platform Name(Facebook, Gmail, LinkedIn, etc.)</string>
    <string name="add">Add</string>
    <string name="search">Search Your Password</string>
    <string name="dashboard_activity">Home</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="search_hint">Search for Passwords</string>
    <string name="or">OR</string>
    <string name="logo">App Logo</string>
</resources>
