<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/etPlatform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/edittext_background"
        android:hint="@string/platform"
        android:singleLine="true"
        android:padding="5dip"
        android:textColorHint="#DDAAAAAA"
        android:textSize="16dip" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPlatform"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/edittext_background"
        android:hint="@string/username"
        android:singleLine="true"
        android:padding="5dip"
        android:textColorHint="#DDAAAAAA"
        android:textSize="16dip" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/edittext_background"
        android:hint="@string/password"
        android:singleLine="true"
        android:padding="5dip"
        android:textColorHint="#DDAAAAAA"
        android:textSize="16dip" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="30dip"
        android:background="@color/colorPrimary"
        android:padding="5dip"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dip" />

    <LinearLayout
        android:id="@+id/llAdd_vs_Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="150dip"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:alpha="0.7"
            android:background="@color/dirty_white" />

        <TextView
            android:id="@+id/txtOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:alpha="0.7"
            android:text="@string/or"
            android:textSize="15sp" />

        <View
            android:layout_width="150dip"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:alpha="0.7"
            android:background="@color/dirty_white" />


    </LinearLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llAdd_vs_Search"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:background="@color/colorPrimary"
        android:padding="5dip"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dip" />



</RelativeLayout>